# photo-promo

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  INDEX.md  README.md  config.yaml  pyproject.toml  设计方案.md
docs/: io-contract.md  trio-protocol.md
prompts/: l1_screen.txt  l2_caption.txt  l2_describe.txt
src/: cli.py  config.py  db.py  export.py  meta.py  siglip.py  stage0_meta.py  stage1_clip.py  stage2_vlm.py
src/providers/: __init__.py  ark.py  base.py
tests/fixtures/: _gen.py
