[project]
name = "photo-promo"
version = "0.1.0"
description = "活动照片智能筛选 + 宣传文案生成系统"
requires-python = ">=3.11"
# Phase 0 只装骨架必需依赖；重依赖（transformers/onnxruntime/opencv/openai/
# reverse_geocoder/exifread）留到对应 Phase 再加，避免一上来装一大坨。
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pillow>=10.0",
]

[project.scripts]
promo = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
