[project]
name = "photo-promo"
version = "0.1.0"
description = "活动照片智能筛选 + 宣传文案生成系统"
requires-python = ">=3.11"
# 依赖按 Phase 增量加。重依赖（transformers/onnxruntime/openai）留到对应 Phase。
dependencies = [
    # Phase 0 骨架
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pillow>=10.0",
    # Phase 1 L0 元数据筛
    "opencv-python-headless>=4.13.0.92",
    "exifread>=3.5.1",
    "reverse-geocoder>=1.5.1",
    "numpy>=2.4.6",
    "transformers>=5.12.0",
    "torch>=2.12.0",
]

[project.scripts]
promo = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "piexif>=1.1.3",
]
